--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,16 @@ html, body{
       padding-left: 20px;
       padding-right: 20px;
   }
+  .inner-contact{
+    flex: 1;
+    max-width: 960px;
+    max-height: 500px;
+    align-content: center;
+    justify-content: center;
+    background: #ffffff;
+    padding-left: 20px;
+    padding-right: 20px;
+}
   .inner-port{
     flex: 1;
     max-width: 960px;
@@ -73,19 +83,19 @@ html, body{
     background: #ffffff;
     padding-left: 20px;
     padding-right: 20px;
-}
+  }
+  .inner-contact>div{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #acacaa;
+  }
   #aboutMe{
       color:#4aaaa5;
       padding-bottom: 20px;
       border-bottom: 3px solid #e7e7e7;
   }
-  .aboutMe{
-
-  }
   .aboutMe>p{
       margin: 5px;
       padding: 5px 20px 5px 5px;
-
   }
 
   footer{
@@ -133,7 +143,23 @@ html, body{
   .label>h3{
       text-align: center;
   }
-  .inner>textarea{
-    height: 150px;
-    min-width: 932px;
+  .inner-contact>div>textarea{
+    height: 175px;
+    min-width: 950px;
   }
+  input[type=text], textarea {
+    width: 100%;
+    padding: 5px 0;
+    border: 1px solid #dddddd;
+    box-sizing: border-box;
+    margin: 5px 0px 15px 0px;
+    outline: none;
+    cursor: text;
+}
+input[type=submit] {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-weight: bold;
+    border:none;
+    padding: 5px 20px;
+}
