--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,10 @@ input[type=submit] {
     border:none;
     padding: 5px 20px;
 }
+input[type=submit]:focus {
+    background-color: #122b29;
+    color: #ffffff;
+    font-weight: bold;
+    border:none;
+    padding: 5px 20px;
+}
