--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,10 @@ html, body{
       float:left;
       padding-right: 10px;
       image-orientation: from-image;
+      position: relative;
+  }
+  img.wrap:hover{
+    opacity:0.7;
   }
   .portfolio-images{
       padding-left: 20px;
