--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
-html, body{
-    height:100%;
-}
 * {
     text-align: justify;
     font: #777777;
+  }
+
+  html, body{
+    height:100%;
   }
   header{
     display: block;
@@ -12,7 +13,7 @@ html, body{
     border-bottom-color: #cccccc;
     border-bottom-width: 2px;
   }
-  .headerNav{
+  .topNav{
     display: flex;
     max-width: 960px;
     justify-content: space-between;
@@ -26,20 +27,28 @@ html, body{
     background: #4aaaa5;
     margin: 0;
   }
-  .headerNavigation{
+  .nav{
     display: flex;
     justify-content: flex-end;
     list-style: none;
   }
-  .headerNavigation>li {
+  .nav>li {
     padding: 6px;
     flex-flow: row wrap;
     margin:0;
   }
-  .headerNavigation>li>a:hover{
+  .nav>li>a:hover{
     background: #4aaaa5;
     color: #eeeeee;
     padding: 10px 5px;
+  }
+  a{
+    color: #777777;
+    text-decoration: none;
+  }
+  .sep{
+    color:#acacaa;
+    opacity: .2;
   }
   header:after{
       content:" ";
@@ -68,26 +77,26 @@ html, body{
       background: #ffffff;
   }
   .inner-contact{
-    flex: 1;
-    max-width: 960px;
-    max-height: 500px;
-    align-content: center;
-    justify-content: center;
-    background: #ffffff;
+      flex: 1;
+      max-width: 960px;
+      max-height: 500px;
+      align-content: center;
+      justify-content: center;
+      background: #ffffff;
 }
   .inner-port{
-    flex: 1;
-    max-width: 960px;
-    max-height: 570px;
-    align-content: center;
-    justify-content: center;
-    background: #ffffff;
+      flex: 1;
+      max-width: 960px;
+      max-height: 570px;
+      align-content: center;
+      justify-content: center;
+      background: #ffffff;
   }
   .inner-contact>div{
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #acacaa;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      color: #acacaa;
   }
-  #aboutMe{
+  #blueHeading{
       color:#4aaaa5;
       padding-bottom: 20px;
       border-bottom: 3px solid #e7e7e7;
@@ -102,25 +111,6 @@ html, body{
       max-width: 920px;
       padding-left: 20px;
   }
-  footer{
-      color: #ffffff;
-      background: #666666;
-      text-align: center;
-      font-size: 12px;
-      border-top: 8px solid #4aaaa5;
-      padding: 30px 0 2px 0;
-  }
-  .footer{
-    flex-shrink: 0;
-  }
-  a{
-      color: #777777;
-      text-decoration: none;
-  }
-  .sep{
-      color:#acacaa;
-      opacity: .2;
-  }
   img.wrap{
       float:left;
       padding-right: 10px;
@@ -128,12 +118,12 @@ html, body{
       position: relative;
   }
   img.wrap:hover{
-    opacity:0.7;
+      opacity:0.7;
   }
   .portfolio-images{
-      padding-left: 20px;
-      display: flex;
-      flex-wrap: wrap;
+    padding-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
   }
   .proj{
     position: relative;
@@ -143,7 +133,7 @@ html, body{
   }
   .proj>img:hover{
     opacity: 0.1;
-}
+  }
   .label{
       position: absolute;
       background: #4aaaa5;
@@ -157,29 +147,40 @@ html, body{
       text-align: center;
   }
   .inner-contact>div{
-    padding-left: 20px;
+      padding-left: 20px;
   }
   .inner-contact>div>textarea{
-    height: 175px;
-    min-width: 920px;
+      height: 175px;
+      min-width: 920px;
   }
   input[type=text], textarea {
-    width: 920px;
-    padding: 5px 0;
-    border: 1px solid #dddddd;
-    margin: 5px 0px 15px 0px;
-}
-input[type=submit] {
-    background-color: #4aaaa5;
-    color: #ffffff;
-    font-weight: bold;
-    border:none;
-    padding: 5px 20px;
-}
-input[type=submit]:focus {
-    background-color: #122b29;
-    color: #ffffff;
-    font-weight: bold;
-    border:none;
-    padding: 5px 20px;
-}
+      width: 920px;
+      padding: 5px 0;
+      border: 1px solid #dddddd;
+      margin: 5px 0px 15px 0px;
+  }
+  input[type=submit] {
+      background-color: #4aaaa5;
+      color: #ffffff;
+      font-weight: bold;
+      border:none;
+      padding: 5px 20px;
+  }
+  input[type=submit]:focus {
+      background-color: #122b29;
+      color: #ffffff;
+      font-weight: bold;
+      border:none;
+      padding: 5px 20px;
+  }  
+  footer{
+      color: #ffffff;
+      background: #666666;
+      text-align: center;
+      font-size: 12px;
+      border-top: 8px solid #4aaaa5;
+      padding: 30px 0 2px 0;
+  }
+  .footer{
+      flex-shrink: 0;
+  }
