--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@
     padding: 20px 15px;
     background: #4aaaa5;
     margin: 0;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
   }
   .nav{
     display: flex;
@@ -45,6 +46,7 @@
   a{
     color: #777777;
     text-decoration: none;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
   }
   .sep{
     color:#acacaa;
@@ -93,7 +95,6 @@
       background: #ffffff;
   }
   .inner-contact>div{
-      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
       color: #acacaa;
   }
   #blueHeading{
@@ -102,6 +103,7 @@
       border-bottom: 3px solid #e7e7e7;
       margin-left: 20px;
       width: 920px;
+      font-family: 'Georgia', Times, 'Times New Roman', serif;
   }
   .aboutMe>p{
       margin: 5px;
@@ -142,6 +144,7 @@
       left: 0;
       right: 44px;
       bottom: 10%;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
   .label>h3{
       text-align: center;
@@ -158,6 +161,7 @@
       padding: 5px 0;
       border: 1px solid #dddddd;
       margin: 5px 0px 15px 0px;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
   input[type=submit] {
       background-color: #4aaaa5;
@@ -165,6 +169,7 @@
       font-weight: bold;
       border:none;
       padding: 5px 20px;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
   input[type=submit]:focus {
       background-color: #122b29;
@@ -180,6 +185,7 @@
       font-size: 12px;
       border-top: 8px solid #4aaaa5;
       padding: 30px 0 2px 0;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
   .footer{
       flex-shrink: 0;
