--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@
   footer{
       color: #ffffff;
       background: #666666;
-      text-align: center;
+      text-align: bottom;
       font-size: 12px;
       border-top: 8px solid #4aaaa5;
       padding: 30px 0 2px 0;
